footer scss variable color

--- a/css/style2.css
+++ b/css/style2.css
@@ -463,7 +463,7 @@ hamburger
           text-underline-offset: .1em; }
 
 #footer {
-  background-image: var(--overlay);
+  background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
   background-color: #333; }
   #footer .footer {
     height: 100vh;
@@ -507,7 +507,7 @@ hamburger
       #footer .footer .brand:hover::after {
         opacity: 1; }
       #footer .footer .brand h3 {
-        font-family: 'Gruppo', cursive;
+        font-family: "Gruppo", cursive;
         text-shadow: none;
         letter-spacing: .1em;
         position: relative;
@@ -532,14 +532,14 @@ hamburger
         #footer .footer .brand h3::before {
           content: '\f337';
           text-align: center;
-          color: #ddd;
-          background: var(--overlay);
+          color: #eee;
+          background: linear-gradient(60deg, #29323c 0%, #485563 100%);
           box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156), inset -3px -3px 5px rgba(0, 0, 0, 0.156); }
       #footer .footer .brand:hover h3::before {
         left: 100%;
         color: #dc143c; }
       #footer .footer .brand h2 {
-        font-family: 'Ubuntu', sans-serif;
+        font-family: 'Ubuntu',sans-serif;
         color: #ddd;
         font-weight: 500;
         font-size: 1.2em;
