--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,6 @@
 // fonts 
 $font-gruppo: 'Gruppo', cursive;
+$font-gruppo: 'Ubuntu',sans-serif;
 // text colors 
 $text-black: #000;
 $text-white: #fff;
