--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,7 +1,7 @@
 // footer
 #footer {
-    background-image: var(--overlay);
-    background-color: #333;
+    background-image: $overlay;
+    background-color: $background-dark;
     .footer {
         height: 100vh;
         display: flex;
@@ -54,12 +54,12 @@
             // end of brand hover state
             // title (h3)
             h3 {
-                font-family: 'Gruppo', cursive;
+                font-family: $font-gruppo;
                 text-shadow: none;
                 letter-spacing: .1em;
                 position: relative;
                 padding: .1em;
-                color: #fff;
+                color:$text-white;
                 text-align: center;
                 /* font-size: clamp(1rem, 3vw + 1rem, 4rem); */
                 font-size: 1.5em;
@@ -84,8 +84,8 @@
                 &::before {
                     content: '\f337';
                     text-align: center;
-                    color: #ddd;
-                    background: var(--overlay);
+                    color: $text-white-e;
+                    background: $overlay;
                     box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156),
                     inset -3px -3px 5px rgba(0, 0, 0, 0.156);
                 }
@@ -97,16 +97,15 @@
                 h3 {
                     &::before {
                         left: 100%;
-                        color: #dc143c;
+                        color: $span-crimson;
                     }
                 }
             }
             // end of h3 message slide in on hover
             // h2 pop up messsage
             h2 {
-                font-family: 'Ubuntu',
-                sans-serif;
-                color: #ddd;
+                font-family: $font-ubuntu;
+                color: $text-white-d;
                 font-weight: 500;
                 font-size: 1.2em;
                 letter-spacing: .1em;
@@ -165,7 +164,7 @@
                 content: "\f0c0";
                 font-size: 1.5em;
                 text-align: center;
-                color: #ddd;
+                color: $text-white-d;
                 opacity: 1;
                 background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
                 box-shadow: inset 3px 3px 5px #ddda,
@@ -207,7 +206,7 @@
                         bottom: -120%;
                         left: 0;
                         font-size: .4em;
-                        color: #ddd;
+                        color: $text-white-d;
                         width: 100%;
                         height: 100%;
                         opacity: 0;
@@ -298,7 +297,7 @@
             text-align: center;
             p,
             span {
-                font-family: 'Gruppo', cursive;
+                font-family: $font-gruppo;
                 color: #f4f4f4;
                 font-size: 1em;
                 text-transform: capitalize;
