footer social icons label adjustment

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,6 @@
 // fonts 
 $font-gruppo: 'Gruppo', cursive;
-$font-gruppo: 'Ubuntu',sans-serif;
+$font-ubuntu: 'Ubuntu',sans-serif;
 // text colors 
 $text-black: #000;
 $text-white: #fff;
