--- a/css/style2.css
+++ b/css/style2.css
@@ -539,7 +539,7 @@ hamburger
         left: 100%;
         color: #dc143c; }
       #footer .footer .brand h2 {
-        font-family: 'Ubuntu',sans-serif;
+        font-family: "Ubuntu", sans-serif;
         color: #ddd;
         font-weight: 500;
         font-size: 1.2em;
@@ -560,7 +560,7 @@ hamburger
       justify-content: space-between;
       width: 90%;
       margin: 5px auto;
-      padding: .5em;
+      padding: .5em .5em 1em;
       border-radius: 5px;
       overflow: hidden;
       position: relative;
@@ -614,23 +614,25 @@ hamburger
         margin: 1em .5em 0;
         transition: 1s ease; }
         #footer .footer .social-icon .social-item a {
-          position: relative; }
+          position: relative;
+          z-index: 1; }
           #footer .footer .social-icon .social-item a::before {
             content: attr(data-icon);
             position: absolute;
-            bottom: -120%;
-            left: 0;
-            font-size: .4em;
+            bottom: -140%;
+            left: -.5em;
+            font-size: .5em;
             color: #ddd;
             width: 100%;
             height: 100%;
             opacity: 0;
             transition: 1s;
+            z-index: -1;
             transform: translateY(100%); }
             @media (min-width: 768px) {
               #footer .footer .social-icon .social-item a::before {
-                font-size: .5em;
-                bottom: -130%;
+                font-size: .6em;
+                bottom: -100%;
                 left: -30%; } }
         #footer .footer .social-icon .social-item i {
           font-size: 1.6em;
@@ -671,13 +673,13 @@ hamburger
           opacity: 1; }
       #footer .footer .social-icon:hover a::before {
         opacity: 1;
-        transform: translateY(10%); }
+        transform: translateY(0%); }
     #footer .footer #bs21 {
       width: 100%;
       text-align: center; }
       #footer .footer #bs21 p,
       #footer .footer #bs21 span {
-        font-family: 'Gruppo', cursive;
+        font-family: "Gruppo", cursive;
         color: #f4f4f4;
         font-size: 1em;
         text-transform: capitalize;
@@ -1754,7 +1756,7 @@ body {
   margin: 0 auto;
   box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a; }
   #thanks h3 {
-    color: #ddd;
+    color: #eee;
     margin: .5em auto;
     font-size: 1em; }
   #thanks a i {
@@ -1763,7 +1765,7 @@ body {
     margin: 1em auto;
     padding: .5em 3em;
     text-align: center;
-    color: #dddd;
+    color: #eee;
     position: relative; }
     #thanks a i::after {
       position: absolute;
