--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -140,7 +140,7 @@
             justify-content: space-between;
             width: 90%;
             margin: 5px auto;
-            padding: .5em;
+            padding: .5em .5em 1em;
             border-radius: 5px;
             overflow: hidden;
             position: relative;
@@ -199,22 +199,24 @@
                 // links and links label
                 a {
                     position: relative;
+                    z-index: 1;
                     // link label
                     &::before {
                         content: attr(data-icon);
                         position: absolute;
-                        bottom: -120%;
-                        left: 0;
-                        font-size: .4em;
+                        bottom: -140%;
+                        left: -.5em;
+                        font-size: .5em;
                         color: $text-white-d;
                         width: 100%;
                         height: 100%;
                         opacity: 0;
                         transition: 1s;
+                        z-index: -1;
                         transform: translateY(100%);
                         @media (min-width: 768px){
-                            font-size: .5em;
-                            bottom: -130%;
+                            font-size: .6em;
+                            bottom: -100%;
                             left: -30%;
                         }
                     }
@@ -273,10 +275,7 @@
                 } 
                 // end of icon shadow on hover 
                 // freecodecamp camp label
-                &:nth-child(3){
-                    a::before {
-                    }
-                }
+                
                 // end of freecodecamp camp label
             }
             // icon label pop up
@@ -284,7 +283,7 @@
                 a {
                     &::before {
                         opacity: 1;
-                        transform: translateY(10%);
+                        transform: translateY(0%);
                     }
                 }
             }
