--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -9,7 +9,7 @@
         text-align: center;
         width: 100vw;
         margin: 0 auto;
-        padding-bottom: 1em;
+        // padding-bottom: 1em;
         background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
         background-repeat: no-repeat;
         background-size: cover;
