--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -29,7 +29,8 @@ $background-dark: #333;
 $overlay: linear-gradient(60deg, #29323c 0%, #485563 100%);
 $overlay-blue-dark:#29323c;
 $overlay-blue-light: #485563;
-$nav-background: #1f1f1e80;
+$nav-background: #3c3329;
+$nav-active-background: #1b2127;
 $ul-background: #1f1e1e;
 // button colors
 $button-background-grey: #8584844b;
