--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -192,7 +192,7 @@ body {
                     // display nav list on toggle 
                     &.active {
                         left: 20%;
-                        background-color: $overlay-blue-light;
+                        background-color: $nav-active-background;
                     }
                 }
                 // end of mobile screens style
