--- a/css/style2.css
+++ b/css/style2.css
@@ -170,9 +170,9 @@ hamburger
       bottom: 8px; }
     #header .hamburger .bar::after {
       top: 8px; }
-  #header .hamburger:active.bars::before {
+  #header .hamburger:focus.bar::before {
     bottom: 0; }
-  #header .hamburger:active.bars::after {
+  #header .hamburger:focus.bar::after {
     top: 0; }
 
 .top-link {
@@ -213,7 +213,6 @@ hamburger
   text-align: center;
   width: 100vw;
   margin: 0 auto;
-  padding-bottom: 1em;
   background-image: url("../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -788,7 +787,7 @@ body {
   width: 100vw; }
   #header .header {
     min-height: 8vh;
-    background-color: #1f1f1e80;
+    background-color: #3c3329;
     transition: 0.3s ease background-color; }
     #header .header #navbar {
       display: flex;
@@ -890,7 +889,7 @@ body {
             letter-spacing: initial; }
         #header .header #navbar .nav-list ul.active {
           left: 20%;
-          background-color: #485563; }
+          background-color: #1b2127; }
       @media (min-width: 1024px) {
         #header .header #navbar .nav-list ul {
           position: initial;
