--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -227,8 +227,8 @@ hamburger
         // end of top and bottom bars
     }
         // hamburger bars active state
-        &:active {
-            &.bars {
+        &:focus {
+            &.bar {
                 &::before {bottom: 0;}
                 &::after {top: 0;}
             }
