--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@ $font-ubuntu: 'Ubuntu',sans-serif;
 $text-black: #000;
 $text-white: #fff;
 $text-white-trans: #fffa;
+$text-white-trans-d: #ddda;
 $text-dark: #333;
 $text-black-trans: #000a;
 $text-light: #ddd;
