--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -56,7 +56,9 @@ body {
             width: 100%;
             height: 100%;
             max-width: 1300px;
-            padding: 0 10px;
+            @media (max-width: 768px) {
+                padding: 0 5vw;
+            }
             // corner logo
             .brand {
                 h1 {
