--- a/css/style2.css
+++ b/css/style2.css
@@ -1407,21 +1407,20 @@ body {
         color: #fff;
         text-align: left;
         font-size: 1.5em;
+        opacity: 0;
         text-shadow: 0 0 5px #000, 0 0 10px #dc143c;
         line-height: 1.3;
         animation: hero-span 6s ease-in-out;
+        animation-fill-mode: forwards;
         animation-delay: calc(1s + .5s * var(--s));
-        transition: all 3s;
         /* hero h1 keyframes */
         /* hero h1 keyframes */ }
 
 @keyframes hero-span {
-  5% {
-    opacity: 1; }
   10% {
     opacity: 1;
     color: #dc143c8c;
-    transform: translateX(3px);
+    transform: translateX(10px);
     text-shadow: 0 0 1px #fff; }
   100% {
     opacity: 1; } }
@@ -1430,16 +1429,20 @@ body {
         display: inline-block;
         animation: aka 5s ease alternate;
         animation-delay: 4s;
+        animation-fill-mode: forwards;
         margin: .5em 0;
         color: #fff;
-        opacity: 0.5;
+        opacity: 0;
         transform: scale(0.7); }
 
 @keyframes aka {
   50% {
     opacity: 1;
     transform: scale(1);
-    color: tomato; } }
+    color: tomato; }
+  100% {
+    opacity: 1;
+    color: #eee; } }
   #home .hero #cta-header {
     font-size: 1.3em;
     position: relative;
@@ -1452,6 +1455,9 @@ body {
     border-radius: 40px;
     border: none;
     outline: none;
+    opacity: 0;
+    animation: show-cta 2s 5s;
+    animation-fill-mode: forwards;
     background-color: #8584844b;
     text-shadow: 2px 2px 2px #000;
     transition: .3s linear;
@@ -1459,6 +1465,10 @@ body {
     @media (min-width: 768px) {
       #home .hero #cta-header {
         font-size: 1.5em; } }
+
+@keyframes show-cta {
+  100% {
+    opacity: 1; } }
     #home .hero #cta-header::before, #home .hero #cta-header::after {
       position: absolute;
       content: '';
