--- a/css/style2.css
+++ b/css/style2.css
@@ -499,6 +499,7 @@ hamburger
         padding: 0;
         margin: 0 auto; } }
     #contact .contact .contact-items .contact-item {
+      transform: scale(0.95);
       width: 85%;
       /* height: auto; */
       text-align: center;
@@ -539,13 +540,14 @@ hamburger
         left: 0;
         width: 100%;
         height: 100%;
+        background-color: #485563;
         box-shadow: inset 3px 3px 4px #ddda, inset -3px -3px 4px #000a;
         border-radius: 10px;
         z-index: -2;
         opacity: 0;
         transition: .5s ease; }
       #contact .contact .contact-items .contact-item:hover {
-        transform: scale(0.96);
+        transform: scale(1);
         transition: .5s ease;
         transform: preserve-3d; }
         #contact .contact .contact-items .contact-item:hover::before {
@@ -1410,7 +1412,7 @@ body {
         opacity: 0;
         text-shadow: 0 0 5px #000, 0 0 10px #dc143c;
         line-height: 1.3;
-        animation: hero-span 6s ease-in-out;
+        animation: hero-span 5s ease-in-out;
         animation-fill-mode: forwards;
         animation-delay: calc(1s + .5s * var(--s));
         /* hero h1 keyframes */
