--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -47,6 +47,7 @@
             }
             // contact-item
             .contact-item {
+                transform: scale(.95);
                 // tablet to desktop
             @media (min-width: 768px){
                 width: 30%;
@@ -92,6 +93,7 @@
                     left: 0;
                     width: 100%;
                     height: 100%;
+                    background-color: $overlay-blue-light;
                     box-shadow: $box-light-top-md;
                     border-radius: 10px;
                     z-index: -2;
@@ -99,7 +101,7 @@
                     transition: .5s ease;
                 }
                 &:hover {
-                    transform: scale(.96);
+                    transform: scale(1);
                     transition: .5s ease;
                     transform: preserve-3d;
 
